# CppResultOption

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: option_matcher.h  option_prelude.h  result.h  result_err.h  result_prelude.h  some_expected_exception.h
include/CppResultOption/: Option.h  OptionPrelude.h  Result.h  ResultErr.h  ResultOk.h  ResultPrelude.h  err_expected_exception.h  ok_expected_exception.h  option.h  option_none.h  result.h  result_tags.h
tests/: CMakeLists.txt  a.h  tests.cpp  tests_option.cpp
